--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,29 @@
   <groupId>com.mt</groupId>
   <artifactId>wxpay</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+    <modules>
+        <module>mybatis_generator</module>
+    </modules>
+    <packaging>pom</packaging>
 
   <name>wxpay Maven Webapp</name>
 
   <url>http://www.example.com</url>
+
+  <repositories><!-- 代码库 -->
+    <repository>
+      <id>maven-ali</id>
+      <url>http://maven.aliyun.com/nexus/content/groups/public//</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+        <updatePolicy>always</updatePolicy>
+        <checksumPolicy>fail</checksumPolicy>
+      </snapshots>
+    </repository>
+  </repositories>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
